# typed-data-transformation

./: .gitignore  .~lock.commant1.dotx#  1.py  CMakeLists.txt  CNN.py  Chart.py  Compress-decompress.py  Compress_RL.py  DIC.py  Decompress.py  FC-Bench.py  FCbench.py  Gorilla.py  GridSearchCV.py  LBT_file_decom_UCR_Signal.py  MTS-new.py  MTS.py  P_2.py  README.md  RandomizedSearchCV.py  Statistical.py  Statistical_Results.py  Sweep.py  Synthetic_Dataset.py  Time_Mem_50.py  Timeseries_final.py  UCR.py  UCR_Correct.py  Ucr.py  Untitled71.py  V-corr.py  V_1.py  V_2b.py  analysis.py  analyze_dataset.py  block_compression.py  build.sh  build1.sh  build_niagara.sh  build_niagara1.sh  (+69 more)
data/: OC_Blood_Routine.csv  Synthetic-Dataset_5000
external_tools/: CMakeLists.txt  FASTLZ_PARALLEL.cpp  FASTLZ_PARALLEL.h  Zstd.cpp  Zstd2.cpp  bz2_parallel.h  bzib_parallel.h  decompose-new.cpp  decompose-new1.cpp  decompose-row.cpp  decompose.cpp  decompose.h  gzip.cpp  lz4_parallel.h  other.cpp  parallel-bzip2.cpp  parallel-lz4.cpp  parallel-snappy.cpp  parallel.cpp  parallel.h  parralel-zstd.cpp  profiling_info.h  snappy_parallel.h  utils.cpp  utils.h  zlib-parallel.cpp  zlib-parallel.h  zlib.h  zstd_decompress.cpp  zstd_example.cpp  zstd_parallel.cpp  zstd_parallel.h  zstd_test_com_decom.cpp
gpu-compression/: BatchData.h  BatchDataCPU.h  nvcomp_demo.cu  nvcomp_demo.cuh  util.h
gpu-compression/examples/: BatchDataCPU.cpp  BatchDataCPU.h  CMakeLists.txt  README.md  build1.sh  defalt.cu  example.cpp  gdeflate_cpu_compression.cu  gdeflate_cpu_compression1.cu  gdeflate_cpu_compression2.cu  gdeflate_cpu_compressiongzip.cu  nvcomp_gds.cu  util.h
modeling/: .~lock.Decom+zstd+gzip(all).csv#  .~lock.Decom+zstd+gzip.csv#  .~lock.Decom+zstd+gzip4_1M.csv#  .~lock.Decom+zstd+gzip_8_2_l.csv#  .~lock.num_control_f64.csv#  .~lock.original_modified_values.csv#  .~lock.results11.csv#  .~lock.risim.csv#  .~lock.top_20_best_with_zstd.csv#  1.csv  1p.csv  2.csv  Beef_test.tsv.csv  Brotli.py  CONSEQUATIVE.py  Car_TEST.tsv.csv  Decom+back.csv  Decom+zstd+gzip.csv  Decom+zstd+gzip_N.csv  Decomposition-parallel.py  FPZIP.py  LBP_test.py  LBT (copy).py  LBT.py  LBT1.py  LBT1_file.py  LBT1_file1.py  LBT1_file2.py  LBT_1.py  LBT_FC.py  LBT_Old.py  LBT_TESt_o.py  LBT_file_d_R.py  LBT_file_d_R_1.py  LBT_file_d_R_final.py  LBT_file_d_R_final_v1.py  LBT_file_d_R_final_v2.py  LBT_file_decom.py  LBT_file_decom1.py  LBT_file_decom_UCR_Signal.py  (+122 more)
modeling/Figs/: GPU.py  LLMA.py  S-improvment.py  datasets.py  decomposition.py  fig-STD(H2).py  fig-fpzip-all.py  fig-reordering-fastlz.py  fig-std(h2)-Delta.py  fig1-1.py  fig1-2.py  fig1.py  fig11.py  fig12-32.py  fig12-64.py  fig12.py  fig13.py  fig14.py  fig15.py  fig16.py  fig17.py  fig3.py  fig4-fastlz.py  fig4.py  fig5-lz.py  fig5-snappy.py  fig5.py  fig6.py  fig7.py  fig8.py  fig9.py  gmean.py  gmean_results32.csv  mode.py  reordering-delta.py  s-bitshuffle.py  s-decomose-chunck.py  s-fastlz.py  s-mode.py  s-precision.py  (+9 more)
modeling/Throughput/: Analysiz-numblock.py  Compration and throughputplot.py  combine.py  compare-chunk-decompose.py  compare-chunk-decompse-fastlz.py  llms.py
modeling/abaltion/: aggregated_best_ratios.csv  aggregated_remaining_best_ratios.csv  best_config_details.csv  clustering2.py  combine.py  exhaustive search.py  exhusive-clustering-compare.py  find best config.py  get-map-C++.py  gmean-compre -best config.py  motive-fig.py  remaining_best_config_details.csv
modeling/analysis/: compare.py  diff-full-decom-ratio.py
modeling/bitshuffle/: blosc-decompse.py  blosc111.py  decompose-bitshuffle.py  merge.py  transformation-plot.py
modeling/clustering/: aggregated_gmean_ratios.csv  best_config_details.csv  combine-feature.py  convert-config.py  decomposition2.py  determine-k-stastic.py  determine-k.py  ecach feature- clustering.py  example_lz4.h5  example_zstd.h5  feature selection.py  gmean-feature-k.py  gmean_results32H.csv  plot-1.py  plot.py  plot2.py
modeling/col-row-plot/: combine-pythone-scripts.py  plot-compare-row-col.py  plot-row-column-all-config-python.py  row-col-compare.py
modeling/compressed_gzip/: fastlz-chunk.py
modeling/conditional-entropy/: conditional-entropy.py
modeling/cross-entropy/: .~lock.all_partitions.csv#  .~lock.stat_dict.csv#  .~lock.synthetic_all_modes.csv#  .~lock.synthetic_reorder_only_FastLZ.csv#  clustering-diff.py  clusteringh23.py  clusteringh26.py  compressiojn_tools.py  cross-entropy.py  decomposition.py  entropy-utils.py  entropy.py  plot.py  reorder.py  stat_dict.csv  string_float.py  syn-real.py  synthetic_all_modes.csv  synthetic_all_partitions.csv  synthetic_all_partitions_FastLZ.csv  synthetic_all_partitions_Huffman.csv  synthetic_all_partitions_Zstd.csv  synthetic_all_partitions_bzib.csv  synthetic_all_partitions_lzma.csv  synthetic_all_partitions_snappy.csv  synthetic_all_partitions_zlib.csv  synthetic_reorder_only_FastLZ.csv  synthetic_reorder_only_Huffman.csv  synthetic_reorder_only_Zstd.csv  (+2 more)
output/: results.csv  results_Rand.csv  results_statistical.csv
scripts/: .~lock.entropy_and_compression_ratiosfastlz32.csv#  .~lock.fastlz.csv#  .~lock.statistic.csv#  .~lock.statistic_fcbench.csv#  Compression.14111939.nia0862.out  Compression.14111940.nia0864.out  Compression.14111941.nia0055.out  Compression.14111942.nia0082.out  Compression.14111943.nia0206.out  Compression.14111944.nia0654.out  Compression.14111945.nia0632.out  Compression.14111946.nia0861.out  Compression.14111947.nia0779.out  Compression.14111948.nia0780.out  Compression.14111949.nia0781.out  Compression.14111950.nia0619.out  Compression.14111951.nia0620.out  Compression.14111952.nia0621.out  Compression.14111953.nia0622.out  Compression.14111955.nia0728.out  Compression.14111956.nia0729.out  Entropy-combine.py  Entropy.py  FCbench.py  Lab2-plot2.py  Meadiean.py  Median.py  acs_wht_f32_New.sh  acs_wht_f32_e.sh  acs_wht_f32_z.sh  acs_wht_f32_z1.sh  aggreate.py  astro_mhd_f64_New.sh  astro_mhd_f64_z.sh  astro_mhd_f64_z1.sh  astro_pt_f64_New.sh  astro_pt_f64_e.sh  astro_pt_f64_z.sh  astro_pt_f64_z1.sh  bit1.py  (+180 more)
ts_stats/: stats.py
(+328 files in other folders)
